2007-10-12  Werner Koch  <wk@g10code.com>

	* src/inst-kleopatra.nsi: Select by default.  Do not install
	test_uiserver.
	* src/uninst-kleopatra.nsi: No need to remove test_uiserver.

	* src/inst-gpgee.nsi: Do not select by default.
	* src/inst-gpgex.nsi: Select by default.

2007-10-11  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update kleopatra. Update gpgol.
	Disable gpgex.

	* configure.ac (gpgol): Add libassuan as dependency.
	* src/Makefile.am (gpg4win_pkg_gpgol_configure): Add
	--with-libassuan-prefix.

2007-10-10  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-kdelibs.nsi: Do not install libkdefx.dll.
	* packages/packages.current: Update gpgme, kdelibs and kleopatra.

2007-10-09  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Fix last change.
	* packages/packages.current: Update gpgex.

	* configure.ac: Disable oxygen-icons for now.
	* packages/packages.current: Disable oxygen-icons for now.  Update
	kleopatra.

	* src/Makefile.am (gpg4win_pkg_gpa_configure): Add search path for
	libassuan and gpg-error.

2007-10-06  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Fixed gpgex filename to be .gz.

2007-10-05  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update dirmngr.

	* packages/packages.current: Update libassuan.

	* packages/packages.current: Update gpgex and libassuan, and fix gnupg2.

	* packages/packages.current: Update gpgme, gpgex and kleopatra.

2007-10-02  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update libassuan, gpgme, gnupg and kleopatra.

2007-09-28  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update GPGME snapshot.

	* src/inst-kleopatra.nsi: Put kleopatra into bin for now.
	* src/uninst-kleopatra.nsi: Remove it from there.
	* src/inst-kdesupport.nsi: Put dbus-daemon into bin for now, and
	install missing config files.
	* src/uninst-kdesupport.nsi: Uninstall these files.

2007-09-26  Marcus Brinkmann  <marcus@g10code.de>
