@@ -147,10 +147,15 @@ gpg4win_pkg_gnupg2_configure = \
   --without-included-gettext \
   --disable-regex
 
+# We would like to use --with-libiconv-prefix and
+# --with-libintl-prefix, but these don't work with the cheesy
+# non-"libfoo.la" versions of iconv and gettext that we are using.
 gpg4win_pkg_pinentry_configure = \
   --disable-pinentry-gtk \
-  --disable-pinentry-gtk2 \
-  --disable-pinentry-qt
+  --enable-pinentry-gtk2 --with-glib-prefix=$(idir) --with-gtk-prefix=$(idir) \
+  --disable-pinentry-qt \
+  CPPFLAGS=-I$(idir)/include LDFLAGS=-L$(idir)/lib
+#  --with-libiconv-prefix=$(idir) --with-libintl-prefix=$(idir)
 
 # The LDFLAGS is needed for -lintl for glib.  The QT4 variables work
 # around the lack of cross compilation support in qt-dev.
