@@ -1,3 +1,10 @@
+2007-10-14  Marcus Brinkmann  <marcus@g10code.de>
+
+	* src/Makefile.am (gpg4win_pkg_pinentry_configure): Enable
+	pinentry gtk2 and add required configure flags for it.
+	* src/inst-pinentry.nsi: Install pinentry-gtk-2.exe along with
+	pinentry-w32.exe and make it the default.
+
 2007-10-12  Werner Koch  <wk@g10code.com>
 
 	* src/inst-kleopatra.nsi: Select by default.  Do not install
